# Header files need not be enumerated
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${PROJECT_BINARY_DIR})

###########
# LIB FILO #
###########

# Install header files
LIST(APPEND libfilo_install_headers
	filo.h filo_internal.h
)
INSTALL(FILES ${libfilo_install_headers} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

LIST(APPEND libfilo_srcs
    filo.c
)

# FILO Library
ADD_LIBRARY(filo_o OBJECT ${libfilo_srcs})

ADD_LIBRARY(filo SHARED $<TARGET_OBJECTS:filo_o>)
TARGET_LINK_LIBRARIES(filo ${FILO_EXTERNAL_LIBS})
SET_TARGET_PROPERTIES(filo PROPERTIES OUTPUT_NAME filo CLEAN_DIRECT_OUTPUT 1)
INSTALL(TARGETS filo DESTINATION ${CMAKE_INSTALL_LIBDIR})

ADD_LIBRARY(filo-static STATIC $<TARGET_OBJECTS:filo_o>)
IF(FILO_LINK_STATIC)
        SET_TARGET_PROPERTIES(filo-static PROPERTIES LINK_SEARCH_START_STATIC 1)
        SET_TARGET_PROPERTIES(filo-static PROPERTIES LINK_SEARCH_END_STATIC 1)
ENDIF(FILO_LINK_STATIC)
TARGET_LINK_LIBRARIES(filo-static ${FILO_EXTERNAL_LIBS})

SET_TARGET_PROPERTIES(filo-static PROPERTIES OUTPUT_NAME filo CLEAN_DIRECT_OUTPUT 1)
INSTALL(TARGETS filo-static DESTINATION ${CMAKE_INSTALL_LIBDIR})
